[gd_scene load_steps=61 format=2]

[ext_resource path="res://Fonts/modelo_fonte_quiz.tres" type="DynamicFont" id=1]
[ext_resource path="res://Cenas/Dado.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/Pino.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Botoes/bt_op_quiz/op_normal.png" type="Texture" id=4]
[ext_resource path="res://Cenas/MainGame.gd" type="Script" id=5]
[ext_resource path="res://Cenas/Quiz.gd" type="Script" id=6]
[ext_resource path="res://Fonts/MainGame.tres" type="DynamicFont" id=7]
[ext_resource path="res://Sprites/Sprites_pino/pino1 1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Sprite_modal/modal_quiz.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_ajustes_sair_hover.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_confirmar_quiz.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Sprite_tabuleiro/tabuleiro.png" type="Texture" id=12]
[ext_resource path="res://Fonts/AntroposFreefont-BW2G.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Sprites/backgrounds/tela_vitoria.png" type="Texture" id=14]
[ext_resource path="res://Cenas/Infor.gd" type="Script" id=15]
[ext_resource path="res://Sprites/Sprite_modal/modal_info.png" type="Texture" id=16]
[ext_resource path="res://Fonts/GothamMedium_1.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://Sprites/Botoes/bt_jogo/fecha_modais_jogo.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Sprite_modal/modal_recompensa.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_menu.png" type="Texture" id=20]
[ext_resource path="res://Cenas/Recompensa.gd" type="Script" id=21]
[ext_resource path="res://Sprites/Botoes/bt_jogo/bt_menu_hover.png" type="Texture" id=22]
[ext_resource path="res://Cenas/Vitoria.gd" type="Script" id=23]
[ext_resource path="res://Sprites/Sprite_modal/modal_ajustes.png" type="Texture" id=24]
[ext_resource path="res://icon.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_colecao_hover.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_pause_hover.png" type="Texture" id=27]
[ext_resource path="res://Cenas/coleção.gd" type="Script" id=28]
[ext_resource path="res://sons/dado.wav" type="AudioStream" id=29]
[ext_resource path="res://sons/resposta_errada.wav" type="AudioStream" id=30]
[ext_resource path="res://sons/vitoria.wav" type="AudioStream" id=31]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_ajustes_efeitos_on.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_ajustes_sair_.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_ajustes_som_on.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_ajustes_voltar_jogo.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_ajustes_aplicar_.png" type="Texture" id=36]
[ext_resource path="res://Cenas/Ajustes.gd" type="Script" id=37]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_confirmar_sair_menu.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_confirmar_sair_menu_hover.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Sprite_modal/modal_menu_jogo.png" type="Texture" id=40]
[ext_resource path="res://Cenas/ir_menu.gd" type="Script" id=41]
[ext_resource path="res://sons/resposta_correta.wav" type="AudioStream" id=42]
[ext_resource path="res://sons/som_ambiente.wav" type="AudioStream" id=43]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_pause.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_colecao.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_direito.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_esquerdo.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_cancelar_sair_menu.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_cancelar_sair_menu_hover.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_ajustes_aplicar_hover.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Botoes/bt_jogo/botao_confirmar_quiz_hover.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Sprite_modal/fundo_modal_escurecido.png" type="Texture" id=52]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 17 )

[sub_resource type="AtlasTexture" id=4]

[sub_resource type="AtlasTexture" id=5]

[sub_resource type="AtlasTexture" id=6]

[sub_resource type="AtlasTexture" id=7]

[sub_resource type="Theme" id=8]

[node name="MainNode" type="Node"]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 164.161, 513.796, 151.998, 256.268, 642.06, 31.2704, 533.245, 569.69, 276.76, 344.205, 365.752 ],
"_edit_vertical_guides_": [ 804.472, 233.434, -31.2278, 747.551, 517.0, 2170.84, 2147.16, 1056.94, 1080.15, 1109.91, 1090.23, -21.0492, 23.5282, 564.0, 331.832, 275.659 ]
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_priority = 1
stream = ExtResource( 43 )
volume_db = -20.0

[node name="Tabuleiro" type="Sprite" parent="."]
position = Vector2( 540, 360 )
z_index = -4
texture = ExtResource( 12 )

[node name="bt_colecao" type="TextureButton" parent="."]
margin_left = 19.0
margin_top = 642.0
margin_right = 197.0
margin_bottom = 704.0
texture_normal = ExtResource( 45 )
texture_hover = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bt_pause" type="TextureButton" parent="."]
margin_left = 24.0
margin_top = 30.0
margin_right = 56.0
margin_bottom = 62.0
texture_normal = ExtResource( 44 )
texture_hover = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dado" parent="." instance=ExtResource( 2 )]
position = Vector2( -5.2728, 0.317699 )

[node name="som_dado" type="AudioStreamPlayer" parent="Dado"]
stream = ExtResource( 29 )
volume_db = -15.0

[node name="Pino" parent="." instance=ExtResource( 3 )]

[node name="Pino_sprite" type="Sprite" parent="Pino"]
position = Vector2( 113.393, 403.175 )
z_index = -1
texture = ExtResource( 8 )
region_rect = Rect2( -28, 15.5, 51, 88.5 )

[node name="pontuacao" type="Label" parent="Pino"]
margin_left = 883.917
margin_top = 25.321
margin_right = 1057.92
margin_bottom = 56.321
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.960784, 0.733333, 0, 1 )
text = "Pontuação: 100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coleção" type="Node2D" parent="."]
visible = false
script = ExtResource( 28 )

[node name="controle" type="Button" parent="coleção"]
margin_right = 1086.0
margin_bottom = 714.0
focus_mode = 0
button_mask = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="coleção"]
position = Vector2( 550.006, 359.188 )
texture = ExtResource( 52 )

[node name="Sprite2" type="Sprite" parent="coleção"]
position = Vector2( 540, 360 )
texture = ExtResource( 19 )

[node name="carta" type="Sprite" parent="coleção"]
position = Vector2( 540, 360 )

[node name="TextureButton" type="TextureButton" parent="coleção"]
margin_left = 505.0
margin_top = 585.839
margin_right = 575.0
margin_bottom = 655.839
texture_normal = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="esquerda" type="TextureButton" parent="coleção"]
margin_left = 313.938
margin_top = 360.0
margin_right = 390.938
margin_bottom = 437.0
texture_normal = ExtResource( 47 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="direita" type="TextureButton" parent="coleção"]
margin_left = 688.396
margin_top = 360.0
margin_right = 765.396
margin_bottom = 437.0
texture_normal = ExtResource( 46 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ir_menu" type="Node2D" parent="."]
visible = false
script = ExtResource( 41 )

[node name="controle" type="Button" parent="ir_menu"]
margin_right = 1086.0
margin_bottom = 714.0
focus_mode = 0
button_mask = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ir_menu"]
position = Vector2( 553.2, 368.88 )
texture = ExtResource( 52 )

[node name="Sprite2" type="Sprite" parent="ir_menu"]
position = Vector2( 540, 360 )
texture = ExtResource( 40 )

[node name="sim" type="TextureButton" parent="ir_menu"]
margin_left = 573.459
margin_top = 438.777
margin_right = 751.459
margin_bottom = 501.777
texture_normal = ExtResource( 38 )
texture_hover = ExtResource( 39 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nao" type="TextureButton" parent="ir_menu"]
margin_left = 327.951
margin_top = 438.777
margin_right = 505.951
margin_bottom = 501.777
texture_normal = ExtResource( 48 )
texture_hover = ExtResource( 49 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ajustes" type="Node2D" parent="."]
visible = false
script = ExtResource( 37 )

[node name="controle" type="Button" parent="Ajustes"]
margin_right = 1086.0
margin_bottom = 714.0
focus_mode = 0
button_mask = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Ajustes"]
position = Vector2( 549.258, 356.796 )
texture = ExtResource( 52 )

[node name="Sprite2" type="Sprite" parent="Ajustes"]
position = Vector2( 540, 360 )
texture = ExtResource( 24 )

[node name="musica" type="TextureButton" parent="Ajustes"]
margin_left = 490.5
margin_top = 240.752
margin_right = 589.5
margin_bottom = 339.752
texture_normal = ExtResource( 34 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="efeitos" type="TextureButton" parent="Ajustes"]
margin_left = 490.5
margin_top = 405.346
margin_right = 589.5
margin_bottom = 504.346
texture_normal = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aplicar" type="TextureButton" parent="Ajustes"]
margin_left = 577.466
margin_top = 513.737
margin_right = 755.466
margin_bottom = 575.737
texture_normal = ExtResource( 36 )
texture_hover = ExtResource( 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sair" type="TextureButton" parent="Ajustes"]
margin_left = 328.923
margin_top = 513.737
margin_right = 504.923
margin_bottom = 574.737
texture_normal = ExtResource( 33 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voltar" type="TextureButton" parent="Ajustes"]
margin_left = 505.0
margin_top = 576.376
margin_right = 575.0
margin_bottom = 646.376
texture_normal = ExtResource( 35 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recompensa" type="Node2D" parent="."]
visible = false
z_index = 3
script = ExtResource( 21 )

[node name="controle" type="Button" parent="Recompensa"]
margin_left = -25.0
margin_right = 1112.0
margin_bottom = 718.0
focus_mode = 0
button_mask = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Recompensa"]
position = Vector2( 540, 360 )
texture = ExtResource( 52 )

[node name="Sprite2" type="Sprite" parent="Recompensa"]
position = Vector2( 540, 360 )
texture = ExtResource( 19 )

[node name="TextureButton" type="TextureButton" parent="Recompensa"]
margin_left = 505.0
margin_top = 589.0
margin_right = 575.0
margin_bottom = 659.0
texture_normal = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="carta" type="Sprite" parent="Recompensa"]
position = Vector2( 540, 360 )

[node name="Timer" type="Timer" parent="Recompensa"]
wait_time = 0.5

[node name="Infor" type="Node2D" parent="."]
visible = false
z_index = 3
script = ExtResource( 15 )

[node name="controle" type="Button" parent="Infor"]
margin_left = -25.0
margin_right = 1112.0
margin_bottom = 718.0
focus_mode = 0
button_mask = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Infor"]
position = Vector2( 540, 360 )
scale = Vector2( 0.989647, 0.981997 )
texture = ExtResource( 52 )

[node name="Sprite2" type="Sprite" parent="Infor"]
position = Vector2( 540, 360 )
texture = ExtResource( 16 )

[node name="Label" type="Label" parent="Infor"]
margin_left = 304.0
margin_top = 260.0
margin_right = 778.0
margin_bottom = 468.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.941176, 0.666667, 0, 1 )
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
align = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Infor"]
margin_left = 305.0
margin_top = 220.0
margin_right = 778.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.941176, 0.666667, 0, 1 )
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
align = 3
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Infor"]
margin_left = 304.0
margin_top = 485.0
margin_right = 777.0
margin_bottom = 524.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.941176, 0.666667, 0, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Infor"]
margin_left = 505.0
margin_top = 578.0
margin_right = 575.0
margin_bottom = 648.0
texture_normal = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Infor"]
wait_time = 0.5

[node name="Quiz" type="Node2D" parent="."]
visible = false
z_index = 3
script = ExtResource( 6 )

[node name="som_erro" type="AudioStreamPlayer" parent="Quiz"]
stream = ExtResource( 30 )
volume_db = -15.0

[node name="som_acerto" type="AudioStreamPlayer" parent="Quiz"]
stream = ExtResource( 42 )
volume_db = -15.0

[node name="controle" type="Button" parent="Quiz"]
margin_left = -25.0
margin_right = 1112.0
margin_bottom = 718.0
focus_mode = 0
button_mask = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="Quiz"]
position = Vector2( 540, 360 )
scale = Vector2( 0.986284, 0.984569 )
z_index = -1
texture = ExtResource( 52 )

[node name="Sprite" type="Sprite" parent="Quiz"]
position = Vector2( 540, 360 )
z_index = -1
texture = ExtResource( 9 )

[node name="Button1" type="CheckButton" parent="Quiz"]
margin_left = 354.0
margin_top = 277.0
margin_right = 725.0
margin_bottom = 343.0
focus_mode = 0
custom_icons/off = SubResource( 4 )
custom_icons/on_disabled = SubResource( 5 )
custom_icons/on = SubResource( 6 )
custom_icons/off_disabled = SubResource( 7 )
custom_fonts/font = ExtResource( 7 )
enabled_focus_mode = 0
clip_text = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite_bt1" type="Sprite" parent="Quiz/Button1"]
position = Vector2( 186.5, 36.9796 )
z_index = -1
texture = ExtResource( 4 )

[node name="label_bt1" type="Label" parent="Quiz/Button1"]
margin_left = 36.0
margin_right = 340.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.666667, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="CheckButton" parent="Quiz"]
margin_left = 354.0
margin_top = 357.0
margin_right = 725.0
margin_bottom = 423.0
focus_mode = 0
custom_icons/off = SubResource( 4 )
custom_icons/on_disabled = SubResource( 5 )
custom_icons/on = SubResource( 6 )
custom_icons/off_disabled = SubResource( 7 )
custom_fonts/font = ExtResource( 7 )
enabled_focus_mode = 0
clip_text = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite_bt2" type="Sprite" parent="Quiz/Button2"]
position = Vector2( 186.5, 36.9796 )
z_index = -1
texture = ExtResource( 4 )

[node name="label_bt2" type="Label" parent="Quiz/Button2"]
margin_left = 36.0
margin_right = 340.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.666667, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="CheckButton" parent="Quiz"]
margin_left = 354.0
margin_top = 437.0
margin_right = 725.0
margin_bottom = 503.0
focus_mode = 0
custom_icons/off = SubResource( 4 )
custom_icons/on_disabled = SubResource( 5 )
custom_icons/on = SubResource( 6 )
custom_icons/off_disabled = SubResource( 7 )
custom_fonts/font = ExtResource( 7 )
enabled_focus_mode = 0
flat = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite_bt3" type="Sprite" parent="Quiz/Button3"]
position = Vector2( 186.5, 36.9796 )
z_index = -1
texture = ExtResource( 4 )

[node name="label_bt3" type="Label" parent="Quiz/Button3"]
margin_left = 36.0
margin_right = 340.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.666667, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Quiz"]
anchor_bottom = 0.365
margin_left = 306.0
margin_top = 169.0
margin_right = 775.0
margin_bottom = 243.0
theme = SubResource( 8 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.666667, 0, 1 )
text = "
"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Quiz"]
wait_time = 0.509

[node name="Timer2" type="Timer" parent="Quiz"]
wait_time = 0.5

[node name="botao_confirma" type="TextureButton" parent="Quiz"]
margin_left = 451.0
margin_top = 540.0
margin_right = 629.0
margin_bottom = 602.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vitória" type="Node2D" parent="."]
visible = false
z_index = 3
script = ExtResource( 23 )

[node name="Button" type="Button" parent="Vitória"]
margin_right = 1078.0
margin_bottom = 716.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Sprite" type="Sprite" parent="Vitória"]
position = Vector2( 540, 360 )
texture = ExtResource( 14 )

[node name="menu" type="TextureButton" parent="Vitória"]
margin_left = 889.0
margin_top = 642.0
margin_right = 1067.0
margin_bottom = 704.0
texture_normal = ExtResource( 20 )
texture_hover = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Vitória"]

[node name="som_vitoria" type="AudioStreamPlayer" parent="Vitória"]
stream = ExtResource( 31 )
volume_db = -15.0

[node name="Timer2" type="Timer" parent="Vitória"]
wait_time = 3.0

[node name="icon2" type="Sprite" parent="."]
position = Vector2( 775.572, 769.144 )
scale = Vector2( 0.890625, 1 )
texture = ExtResource( 25 )

[node name="icon" type="Sprite" parent="."]
position = Vector2( 1068.66, 748.709 )
scale = Vector2( 0.360721, 0.567262 )
texture = ExtResource( 25 )
[connection signal="abre_ajustes" from="." to="Ajustes" method="_on_MainNode_abre_ajustes"]
[connection signal="abre_colecao" from="." to="coleção" method="_on_MainNode_abre_colecao"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="button_up" from="bt_colecao" to="." method="_on_bt_colecao_button_up"]
[connection signal="button_up" from="bt_pause" to="." method="_on_bt_ajustes_button_up"]
[connection signal="dado_rolado" from="Dado" to="Pino" method="dado_rolado"]
[connection signal="abre_infor" from="Pino" to="Infor" method="abre_info"]
[connection signal="abre_quiz" from="Pino" to="Quiz" method="abre_quiz"]
[connection signal="abre_recompensa" from="Pino" to="Recompensa" method="abrir_recompensa"]
[connection signal="carta_recebida" from="Pino" to="coleção" method="_on_Pino_carta_recebida"]
[connection signal="infor" from="Pino" to="Infor" method="_on_Pino_infor"]
[connection signal="oi" from="Pino" to="Quiz" method="_on_Pino_oi"]
[connection signal="recompensa" from="Pino" to="Recompensa" method="_on_Pino_recompensa"]
[connection signal="vitoria" from="Pino" to="Vitória" method="_on_Pino_vitoria"]
[connection signal="button_up" from="coleção/TextureButton" to="coleção" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="coleção/esquerda" to="coleção" method="_on_esquerda_button_up"]
[connection signal="button_up" from="coleção/direita" to="coleção" method="_on_direita_button_up"]
[connection signal="button_up" from="ir_menu/sim" to="ir_menu" method="_on_sim_button_up"]
[connection signal="button_up" from="ir_menu/nao" to="ir_menu" method="_on_nao_button_up"]
[connection signal="modal_menu" from="Ajustes" to="ir_menu" method="_on_Ajustes_modal_menu"]
[connection signal="button_up" from="Ajustes/musica" to="Ajustes" method="_on_musica_button_up"]
[connection signal="button_up" from="Ajustes/efeitos" to="Ajustes" method="_on_efeitos_button_up"]
[connection signal="pressed" from="Ajustes/aplicar" to="Ajustes" method="_on_aplicar_pressed"]
[connection signal="button_up" from="Ajustes/sair" to="Ajustes" method="_on_sair_button_up"]
[connection signal="button_up" from="Ajustes/voltar" to="Ajustes" method="_on_voltar_button_up"]
[connection signal="button_up" from="Recompensa/TextureButton" to="Recompensa" method="voltar_jogo_recompensa"]
[connection signal="timeout" from="Recompensa/Timer" to="Recompensa" method="_on_Timer_timeout"]
[connection signal="button_up" from="Infor/TextureButton" to="Infor" method="bt_fecharinfo_clicado"]
[connection signal="timeout" from="Infor/Timer" to="Infor" method="_on_Timer_timeout"]
[connection signal="resposta_correta" from="Quiz" to="Pino" method="_on_Quiz_resposta_correta"]
[connection signal="resposta_errada" from="Quiz" to="Pino" method="resposta_errada"]
[connection signal="button_up" from="Quiz/Button1" to="Quiz" method="botao1_clicado"]
[connection signal="button_up" from="Quiz/Button2" to="Quiz" method="botao2_clicado"]
[connection signal="button_up" from="Quiz/Button3" to="Quiz" method="botao3_clicado"]
[connection signal="timeout" from="Quiz/Timer" to="Quiz" method="fim_timer"]
[connection signal="timeout" from="Quiz/Timer2" to="Quiz" method="_on_Timer2_timeout"]
[connection signal="button_up" from="Quiz/botao_confirma" to="Quiz" method="_on_botao_confirma_button_up"]
[connection signal="button_up" from="Vitória/menu" to="Vitória" method="_on_menu_button_up"]
[connection signal="timeout" from="Vitória/Timer" to="Vitória" method="_on_Timer_timeout"]
[connection signal="timeout" from="Vitória/Timer2" to="Vitória" method="_on_Timer2_timeout"]
